--- a/index.qmd
+++ b/index.qmd
@@ -34,9 +34,9 @@ include-after-body:
 ::: {.column-page-inset}
 <div class="content-narrow">
 
-The International Herbarium Spectral Digitization Working Group (IHerbSpec) is a global consortium advancing the collection and use of reflectance spectra from herbarium specimens.
+The International Herbarium Spectral Digitization Working Group (IHerbSpec) is a global consortium advancing the collection and use of reflectance spectra from herbarium specimens to advance integrative plant biology and biodiversity science.
 
-Our broad goal is to facilitate the harmonization of spectral datasets through standardized measurement workflows, metadata schema, and data-sharing practices to support and advance integrative plant biodiversity science.
+With a protocol now established to enable the harmonization of spectral datasets through standardized measurement workflows, metadata schema, and data-sharing practices, our focus is on advancing collaborative team science that connects institutions, disciplines, and communities.
 
 </div>
 :::
